[metadata]
name = dbus-signature-pyparsing
author = Anne Mulhern
author_email = amulhern@redhat.com
url = https://github.com/stratis-storage/dbus-signature-pyparsing
description = "dbus signature parser"
license = Apache-2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: dbus_signature_pyparsing._version.__version__
platforms =
  Linux
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    pyparsing

package_dir =
    =src

packages =
    dbus_signature_pyparsing
